--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
